# AvaFrame

./: .codeclimate.yml  .coveragerc  .gitattributes  .gitignore  .pep8speaks.yml  .readthedocs.yml  .zenodo.json  LICENSE.txt  MANIFEST.in  README.md  README.rst  RELEASE-VERSION  avaframeCfg.ini  codecov.yml  et --hard 8859b383c99b2a8c8f493399ba88d565bbe90ee9  local_avaframeCfg.ini  pyproject.toml  requirements.txt  runAna4ProbAna.py  runCom1DFA.py  runCom5GlideSnow.py  runPlotCom1DFA.py  runTmp1Ex.py  run_r_avaflow.py  setup.py  version.py
.github/ISSUE_TEMPLATE/: com1dfa-dev-topic.md  standard-issue.md
.github/workflows/: buildAndUploadPyPi.yml  releaseWithManylinux.yml  runTestSinglePython.yml
.qlty/: qlty.toml
ana1Tests/: FPtest.py  __init__.py  energyLineTest.py  energyLineTestCfg.ini  local_energyLineTestCfg.ini  rotationTest.py  rotationTestCfg.ini  simiSolTest.py
ana3AIMEC/: __init__.py  ana3AIMEC.py  ana3AIMECCfg.ini  local_ana3AIMECCfg.ini
ana4Stats/: __init__.py  probAna.py  probAnaCfg.ini
ana5Utils/: DFAPathGeneration.py  distanceTimeAnalysis.py
avaframe/: Noneprefix_aimech.txt  SHPConv.py  avaframeCfg.ini  avaframe_env_spec.txt  in3Utils.py  logging.conf  runAna3AIMEC.py  runAna3AIMECCompMods.py  runAna3AIMECIndi.py  runAna4ProbAna.py  runAna5DFAPathGeneration.py  runCom1DFA.py  runCom1DFAPYLoop.py  runCom2AB.py  runCom3MDELM.py  runCom4FlowPy.py  runCom4FlowPyCH.py  runCom4FlowPyCH2.py  runCom5GlideSnow.py  runCom5SnowSlide.py  runCom6RockAvalanche.py  runCom6Scarp.py  runCom7Regional.py  runCompareDFAAB.py  runComparisonModules.py  runComparisonTestsPy.py  runComputeDFAPath.py  runComputeDist.py  runDamBreak.py  runExportToCsv.py  runFetchBench.py  runFindAvalancheInfo.py  runFrictionTest.py  runGenProjTopoRelease.py  runGenerateTopo.py  runGenerateTopoRelease.py  runIn1RelInfo.py  runInitializeProject.py  runOperational.py  runPlotCom1DFA.py  (+26 more)
avaframe/COM2AlphaBeta/: AlphaBeta.py  IO_functionality.py  README.md  avalanche_path.xyz  settings.py
avaframe/DFAkernel/: DFATcpu.py  DFAkernel.py  DFAtools.py  DFAtoolsCfg.ini  setParam.py  test.py  tools.py
avaframe/Tools/: NodeTools.py  PlotFunctions.py  PlotTools.py  PostProcessingTools.py
avaframe/aimec_2020/: Main_aimec.py  aimec.py  aimecdata.py  aimecresult.py  aimecresultwidget.py  aimecrunner.py  aimectask.py  aimectaskcoordtrans.py  aimectaskradar.py  aimectaskrunout.py  esrigrid.py
avaframe/ana1Tests/: FPtest.py  ana1EnergyLineTest.py  ana1EnergyLineTest_com1DFACfg.ini  ana1TestsCheckIniFiles.py  anaInfluenceTest.py  analysisTools.py  damBreak.py  damBreakTest.py  damBreakTestCfg.ini  damBreak_com1DFACfg.ini  energyLineTest.py  energyLineTestCfg.ini  energyLineTest_com1DFACfg.ini  influenceTest.py  (+18 more)
benchmarks/: simParameters.py  simParametersDict.py  simParametersSP.py  simParametersVar.py
com1DFA/: DFAToolsCython.c  DFAToolsCython.pyx  DFAfunctionsCython.c  DFAfunctionsCython.pyx  __init__.py  checkCfg.py  com1DFACfg.ini  damCom1DFA.c  damCom1DFA.pxd  damCom1DFA.pyx  deriveParameterSet.py  local_com1DFACfg.ini  particleInitialisation.py  particleTools.py  testSPH.py  timeDiscretizations.py
com1DFAOrig/: CreateProject.cint  CreateentresSimulation.cint  com1DFAOrigCfg.ini  varyRelTh.cint
com2AB/: com2AB.py  com2ABCfg.ini
com3Hybrid/: com3Hybrid.py  com3HybridCfg.ini
com5GlideSnow/: com5GlideSnow.py  com5GlideSnowCfg.ini
docs/: 2_5DSPH.rst  DFAnumerics.rst  FAQ.rst  Makefile  Visualisation.rst  advancedUsage.rst  api.rst  appendixCom1DFA.rst  com1DFAAlgorithm.rst  com1DFAAlgorithmGraph.dot  conf.py  configuration.rst  connector.rst  damToolCom1DFA.rst  dataSources.rst  develop.rst  developinstall.rst  developinstallwin.rst  experimentinstall.rst  getStarted.rst  gettingstarted.rst  glideSnowToolCom1DFA.rst  glossary.rst  index.rst  installation.rst  introduction.rst  logging.rst  moduleAna1Tests.rst  moduleAna3AIMEC.rst  moduleAna4Prob.rst  moduleAna4Stats.rst  moduleAna5Utils.rst  moduleCom1DFA.rst  moduleCom1DFAOrig.rst  moduleCom1DFAPy.rst  moduleCom2AB.rst  moduleCom3Hybrid.rst  moduleCom4FlowPy.rst  moduleCom5GlideSnow.rst  moduleCom5SnowSlide.rst  (+29 more)
in1Data/: computeFromDistribution.py  getInput.py
in2Trans/: __init__.py  cellsize_change.py  shpConversion.py  shp_to_ascii.py
in3Utils/: __init__.py  cfgHandling.py  cfgUtils.py  fileHandlerUtils.py  generateTopo.py  generateTopoCfg.ini  geoTrans.py  getReleaseArea.py  getReleaseAreaCfg.ini  initialiseDirs.py  initializeProject.py  local_generateTopoCfg.ini  logUtils.py  logging.conf
log2Report/: generateCompareReport.py  generateCompareReportCfg.ini  generateReport.py
modules/: export_to_paraview.py  samos_to_h5.py  samos_to_vtk.py  trackParticle.py  trackParticle_vtk.py
out1Peak/: __init__.py  outPlotAllPeak.py
out3Plot/: outAB.py  outAIMEC.py  outAna1Plots.py  outCom1DFA.py  outQuickPlot.py  outQuickPlotCfg.ini
r_avaflow/: generate_paramfile.py  local_com1DFACfg.ini  local_r_avaflowCfg.ini  main_160323.c  r.avaflow.main.c  r_avaflow.py  r_avaflowCfg.ini  ravaflow_main_160323  single_Coulomb2_local_r_avaflowCfg.ini  single_Coulomb_local_r_avaflowCfg.ini  single_voellmy_local_r_avaflowCfg.ini
runScripts/: runAna3AIMEC.py  runAna3AIMECCompMods.py  runComputeDFAPath.py  runEnergyLineTest.py  runGenProjTopoRelease.py  runGenerateTopo.py  runInitializeProject.py  runSimilaritySol.py  runStandardTestsCom1DFAOrig.py  runStatsExample.py  runTestFP.py  runThalwegTimeDiagram.py  runVariationsTestsCom1DFA.py
tests/: local_test_logUtilsCfg.ini  test_DFAPathGeneration.py  test_aimecTools.py  test_ana3AIMEC.py  test_cfgUtils.py  test_checkCfg.py  test_com1DFAOrig.py  test_com1DFATools.py  test_com2AB.py  test_deriveParameterSet.py  test_dfa2Aimec.py  test_generateReport.py  test_generateTopo.py  test_geoTrans.py  test_glideSnow.py  test_initializeProject.py  test_logUtilsCfg.ini  test_particleInitialisation.py  test_plotUtils.py  test_probAna.py  test_shpConversion.py  test_tmp1Ex.py
tinyHelper/: extractDEM.sh  logHelper_extractProcessAndTimes.sh  logHelper_extractProcessTimesAndParams.sh
tmp1Ex/: local_tmp1ExCfg.ini
(+2526 files in other folders)
