[build-system]
# Cython dependency is optional, see setup.py for details.
# For the package (run-time) dependencies, see setup.cfg.
requires = ["setuptools", "numpy", "Cython", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "avaframe"
description = "The Open Avalanche Framework"
readme = "README.md"
dynamic = ["version"]
license = { text = "EUPL" }
authors = [
    { name = "AvaFrame Contributors", email = "felix@avaframe.org" }
]
urls = { Homepage = "http://avaframe.org" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "matplotlib",
    "pyshp",
    "scipy",
    "cmcrameri",
    "seaborn",
    "cython",
    "pandas",
    "shapely",
    "configUpdater",
    "tabulate",
    "deepdiff",
    "deepmerge",
    "psutil",
    "rasterio",
    "contextily",
    "geopandas",
    "fiona",
    "salib"
]

# Setuptools
[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["docs*", "tests*"]

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "node-and-date"
version_file = "avaframe/RELEASE-VERSION.txt"

# Cibuildwhell
[tool.cibuildwheel]
# Only build on CPython 3.12
#build = ["cp312-*"]
skip = ["*musllinux*","*-win32"]
build-verbosity = 1
before-build = "pip install cython numpy"


[tool.cibuildwheel.linux]
repair-wheel-command = "auditwheel --verbose repair   -w {dest_dir} {wheel} --plat manylinux_2_34_x86_64"

#Flake8
[tool.flake8]
max-line-length = 109
select = ['B950']
extend-ignore = ['E203', 'E501']

#Black
[tool.black]
line-length = 109

# PIXI setup
[tool.pixi.workspace]
channels = ["https://prefix.dev/conda-forge"]
platforms = ["linux-64", "win-64", "osx-64"]

[tool.pixi.dependencies]
setuptools = "*"
setuptools-scm = "*"
cibuildwheel = ">=3.0.0,<4"

# Feature dev
[tool.pixi.feature.dev.pypi-dependencies]
avaframe = { path = "./", editable = true }

[tool.pixi.feature.dev.dependencies]
pixi-pycharm = "*"
pytest = "*"
pytest-cov = "*"
pytest-mock ="*"

#Feature doc
[tool.pixi.feature.doc.dependencies]
sphinx = "*"
sphinx-rtd-theme = "*"
sphinxcontrib-bibtex = "*"

#Feature prod
[tool.pixi.feature.prod.pypi-dependencies]
avaframe = "*"

#Feature rcs
[tool.pixi.feature.rcs.pypi-dependencies]
avaframe = "==1.13rc4"

#Feature qgis
[tool.pixi.feature.qgis.dependencies]
qgis = "*"

#Environments
[tool.pixi.environments]
default = { features = ["dev"], solve-group = "default" }
dev = ["dev"]
doc = ["doc", "dev"]
prod = ["prod"]
rcs = ["rcs"]
qgis = ["qgis", "dev"]

