[build-system]
# Cython dependency is optional, see setup.py for details.
# For the package (run-time) dependencies, see setup.cfg.
requires = ["setuptools", "numpy", "Cython", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "avaframe"
description = "The Open Avalanche Framework"
readme = "README.md"
dynamic = ["version"]
license = "EUPL-1.2"
authors = [
    { name = "AvaFrame Contributors", email = "felix@avaframe.org" }
]
urls = { Homepage = "http://avaframe.org" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
requires-python = ">=3.9,<3.14"
dependencies = [
    "numpy<2.0", # numpy 2.0 introduces breaking changes in relation to qgis versions
    "salib<1.5.1", # this is the last aversion that works with numpy <2.
    "pyshp<3.0", # pin until 3.0.3 is out, there's a known bug for certain polygon types
    "matplotlib",
    "scipy",
    "cmcrameri",
    "seaborn",
    "cython",
    "pandas",
    "shapely",
    "configUpdater",
    "tabulate",
    "deepdiff",
    "deepmerge",
    "psutil",
    "rasterio",
    "contextily",
    "geopandas",
    "fiona",
]

# Setuptools
[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["docs*", "tests*"]

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "node-and-date"
version_file = "avaframe/RELEASE-VERSION.txt"

# Cibuildwhell
[tool.cibuildwheel]
# Only build on CPython 3.12
#build = ["cp312-*"]
skip = ["*musllinux*","*-win32"]
build-verbosity = 1
before-build = "pip install cython numpy"


[tool.cibuildwheel.linux]
repair-wheel-command = "auditwheel --verbose repair   -w {dest_dir} {wheel} --plat manylinux_2_34_x86_64"

#Flake8
[tool.flake8]
max-line-length = 109
select = ['B950']
extend-ignore = ['E203', 'E501']

#Black
[tool.black]
line-length = 109

# PIXI setup
[tool.pixi.workspace]
channels = ["https://prefix.dev/conda-forge"]
platforms = ["linux-64", "win-64", "osx-64"]

[tool.pixi.dependencies]
python = "<3.14"
setuptools = "*"
setuptools-scm = "*"
cibuildwheel = "*"
# FSO: remove as soon as possible
libgdal = "*"

# Feature dev
[tool.pixi.feature.dev.pypi-dependencies]
avaframe = { path = "./", editable = true }

[tool.pixi.feature.dev.dependencies]
pixi-pycharm = "*"
pytest = "*"
pytest-cov = "*"
pytest-mock = "*"
black = "*"

#Feature doc
[tool.pixi.feature.doc.dependencies]
sphinx = "*"
sphinx-rtd-theme = "*"
sphinxcontrib-bibtex = "*"

#Feature prod
[tool.pixi.feature.prod.pypi-dependencies]
avaframe = "*"

#Feature py313
[tool.pixi.feature.py313.dependencies]
python = "==3.13.7"

#Feature rcs
#[tool.pixi.feature.rcs.pypi-dependencies]
#avaframe = "==1.13rc4"

#Feature qgis
[tool.pixi.feature.qgis.dependencies]
numpy = "<2.0"
qgis = "*"

#Environments
[tool.pixi.environments]
default = { features = ["dev"], solve-group = "default" }
dev = ["dev"]
doc = ["doc", "dev"]
prod = ["prod"]
#rcs = ["rcs"]
py313 = ["py313", "dev"]
qgis = ["qgis", "dev"]

